--- a/README
+++ b/README
@@ -11,7 +11,7 @@
 # ◇
 
 ## 1. PROJECT: 
-International English HTML CSS JS scripted website for the Ecumenic Creative Operations Project.
+International English HTML CSS JS scripted, adaptive to mobile, responsive website for the Ecumenic Creative Operations Project.
 
 1.1. AUDIENCE RESTRICTION:
 Audience Restriction: [PG] - Parental Guidance Recommended.
@@ -27,7 +27,7 @@ https://en.wikipedia.org/wiki/Motion_picture_content_rating_system
 - Please refer to our Contributing Guide:
 https://github.com/ecumenic/project/blob/master/CONTRIBUTING
 
-## 4. WEBSITE CREDITS:
+## 4. CREDITS:
 - Development Environmet by GitHub: http://www.github.com
 - Git Reference by GitBook: https://git-scm.com
 - Organizational Mind Maps by FreeMind: http://freemind.sourceforge.net
@@ -65,5 +65,3 @@ https://github.com/ecumenic/project/blob/master/LICENSE
 ecumenic@protonmail.com
 
 # ◇
-
-Copyright [CC BY-NC-SA] (c) Ecumenic Creative Operations 
