--- a/README
+++ b/README
@@ -13,9 +13,26 @@
 ## 1. PROJECT: 
 International English HTML CSS JS scripted, adaptive to mobile, responsive website for the Ecumenic Creative Operations Project.
 
-1.1. AUDIENCE RESTRICTION:
+1.1. AUDIENCE RECOMMENDATION:
 Audience Restriction: [PG] - Parental Guidance Recommended.
 https://en.wikipedia.org/wiki/Motion_picture_content_rating_system
+
+1.2. WEBSITE SECTIONS:
+- PROJECT
+- TRAILER
+- PROJECT
+- CULTURAL EXPERIENCE ANALYSIS CHART:
+- RESEARCH
+- PROGRESSIVE COURSE PROGRAM CHART
+- SERVICES AND PRODUCTS
+- ECUMENIC CREATIVITY CHART:
+- PORTFOLIO
+- COMPANY
+- MEDIA
+- HIRE US
+- PARTICIPATE
+- DONATE
+- CONTACT
 
 ## 2. CONTRIBUTIONS NEEDED:
 - Website review and code cleaning for SEO & speed optimization.
