--- a/README
+++ b/README
@@ -27,11 +27,13 @@ https://en.wikipedia.org/wiki/Motion_picture_content_rating_system
 - SERVICES AND PRODUCTS
 - ECUMENIC CREATIVITY CHART:
 - PORTFOLIO
-- COMPANY
+- DOCUMENTATION
 - MEDIA
+- COMPANY
 - HIRE US
 - PARTICIPATE
 - DONATE
+- CALENDAR
 - CONTACT
 
 ## 2. CONTRIBUTIONS NEEDED:
