--- a/README
+++ b/README
@@ -37,7 +37,7 @@ https://en.wikipedia.org/wiki/Motion_picture_content_rating_system
 - CONTACT
 
 ## 2. CONTRIBUTIONS NEEDED:
-- Website review and code cleaning for SEO & speed optimization.
+- Website review and code cleaning for SEO & speed optimization for computers and mobile.
 - Website translation to other multiple languages.
 - Other repository projects (https://github.com/ecumenic) review and optimization.
 - Ecumenic Creative Operations project (https://github.com/ecumenic/project) review and optimization.
