--- a/README
+++ b/README
@@ -68,7 +68,7 @@ https://github.com/ecumenic/project/blob/master/CONTRIBUTING
 - Online BlockChain Payment by FairCoin: https://www.fair-coin.org
 - Online Crowdsourcing by Causes: https://www.causes.com
 
-## 5. ADMINISTRATION BOARD:
+## 5. PROJECT DIRECTION:
 
 - Operário Ribeiro
 https://www.linkedin.com/in/operarioribeiro
