--- a/README
+++ b/README
@@ -83,5 +83,9 @@ https://github.com/ecumenic/project/blob/master/LICENSE
 ## 8. CONTACT:
 ecumenic@protonmail.com
 
+## 9. DONATIONS:
+- Donorbox: https://donorbox.org/ecumenic 
+- Faircoin: fPm9oraA65TdrqWA1991yG1Qsp6XX3BLf9
+
 # ◇
 
